k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: fcc-physics-events-backend
  name: fcc-physics-events-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fcc-physics-events-backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.36.0 (ae2a39403)
        eos.okd.cern.ch/mount-eos-with-credentials-from-secret: eos-credentials
      labels:
        io.kompose.service: fcc-physics-events-backend
    spec:
      containers:
      - args:
        - fastapi
        - dev
        - app/main.py
        - --host
        - 0.0.0.0
        - --port
        - "8000"
        image: registry.cern.ch/fcc-physics-events/fcc-physics-events-backend:19
        name: fcc-phsyics-events-backend
        ports:
        - containerPort: 8000
          protocol: TCP
        volumeMounts:
        - name: eos
          mountPath: /eos
        - name: backend-storage
          mountPath: /app/storage
      volumes:
      - name: eos
        persistentVolumeClaim:
          claimName: "eos-volume"
      - name: backend-storage
        persistentVolumeClaim:
          claimName: backend-storage-pvc
      restartPolicy: Always
