k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: fcc-physics-events-backend
  name: fcc-physics-events-backend
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: fcc-physics-events-backend
