k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: fcc-physics-events-frontend
  name: fcc-physics-events-frontend
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: fcc-physics-events-frontend
